(fuse/navigation) Fixed: First children of collapsable items don't have proper spacing at the top

--- a/src/@fuse/components/navigation/vertical/styles/appearances/default.scss
+++ b/src/@fuse/components/navigation/vertical/styles/appearances/default.scss
@@ -335,6 +335,7 @@ fuse-vertical-navigation {
         }
 
         > .fuse-vertical-navigation-item-children {
+            margin-top: 6px;
 
             > *:last-child {
                 padding-bottom: 6px;
